# AgentTransportProtocol

./: .gitignore  Cargo.toml  README.md  render.yaml
.claude/: launch.json
crates/atp-bench/: Cargo.toml
crates/atp-bench/src/: main.rs
crates/atp-context/: Cargo.toml
crates/atp-context/src/: adaptive.rs  differential.rs  embedding.rs  extraction.rs  lib.rs  similarity.rs
crates/atp-fault/: Cargo.toml
crates/atp-fault/src/: backpressure.rs  checkpoint.rs  circuit_breaker.rs  heartbeat.rs  lib.rs  poison.rs
crates/atp-handshake/: Cargo.toml
crates/atp-handshake/src/: contract.rs  lib.rs  negotiation.rs  offer.rs  probe.rs  registry.rs
crates/atp-identity/: Cargo.toml
crates/atp-identity/src/: did.rs  keypair.rs  lib.rs  store.rs  sybil.rs  trust.rs
crates/atp-node/: Cargo.toml
crates/atp-node/src/: builder.rs  dispatcher.rs  lib.rs  node.rs
crates/atp-proto/: Cargo.toml  build.rs
crates/atp-proto/src/: lib.rs
crates/atp-python/: Cargo.toml  pyproject.toml
crates/atp-python/src/: lib.rs  py_context.rs  py_identity.rs  py_routing.rs  py_sdk.rs  py_sim.rs  py_types.rs
crates/atp-routing/: Cargo.toml
crates/atp-routing/src/: bellman_ford.rs  cost.rs  graph.rs  lib.rs  optimizer.rs  patterns.rs
crates/atp-sdk/: Cargo.toml
crates/atp-sdk/src/: agent.rs  lib.rs  network.rs  parse.rs  report.rs  results.rs
crates/atp-sim/: Cargo.toml
crates/atp-sim/src/: agent.rs  clock.rs  harness.rs  lib.rs  network.rs  task_gen.rs
crates/atp-transport/: Cargo.toml
crates/atp-transport/src/: client.rs  codec.rs  lib.rs  server.rs
crates/atp-types/: Cargo.toml
crates/atp-types/src/: agent.rs  capability.rs  config.rs  context.rs  error.rs  lib.rs  message.rs  route.rs  task.rs  trust.rs
docs/wiki/: ATP-vs-MCP-vs-RAG.md  Architecture-Overview.md  Benchmarks.md  Case-Studies.md  Contributing.md  FAQ.md  Getting-Started.md  Home.md  Layer-1:-Identity-and-Trust.md  Layer-2:-Capability-Handshake.md  Layer-3:-Context-Compression.md  Layer-4:-Economic-Routing.md  Layer-5:-Fault-Tolerance.md  Python-SDK.md  SDK-API-Reference.md  _Sidebar.md  gRPC-Service.md
proto/atp/v1/: common.proto  context.proto  fault.proto  handshake.proto  identity.proto  routing.proto  service.proto  task.proto
scripts/: push-wiki.sh
tests/: integration_tests.rs
website/: index.html
