[package]
name = "atp-fault"
version.workspace = true
edition.workspace = true

[dependencies]
atp-types.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
