[package]
name = "atp-identity"
version.workspace = true
edition.workspace = true

[dependencies]
atp-types.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
