[package]
name = "atp-node"
version.workspace = true
edition.workspace = true

[dependencies]
atp-types.workspace = true
atp-identity.workspace = true
atp-handshake.workspace = true
atp-context.workspace = true
atp-routing.workspace = true
atp-fault.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
