[package]
name = "atp-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "atp"
crate-type = ["cdylib", "rlib"]

[dependencies]
atp-types = { path = "../atp-types" }
atp-identity = { path = "../atp-identity" }
atp-handshake = { path = "../atp-handshake" }
atp-context = { path = "../atp-context" }
atp-routing = { path = "../atp-routing" }
atp-fault = { path = "../atp-fault" }
atp-sim = { path = "../atp-sim" }
pyo3 = { version = "0.23", features = ["extension-module"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ed25519-dalek = "2"
