[package]
name = "atp-transport"
version.workspace = true
edition.workspace = true

[dependencies]
atp-types.workspace = true
atp-proto.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio-stream = "0.1"
